# fluent_py_notes

./: README.md  pyproject.toml
fluent_python/: show_count.py
fluent_python/ch_08/: show_count_fail.py
fluent_python/ch_09/: ch9_decorators_and_closures.ipynb  decorate_primer.ipynb
fluent_python/ch_11/: notes.ipynb
fluent_python/notebooks/: ch7_funcs_first_class.ipynb
tests/: show_count_test.py
