[tool.poetry]
name = "fluent_python"
version = "0.1.0"
description = ""
authors = ["dwanneruchi <davidwanner11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.2.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
